--- a/media/css/base/send-to-device.less
+++ b/media/css/base/send-to-device.less
@@ -15,6 +15,7 @@
         position: relative;
         width: @widthDesktop - (@gridGutterWidth * 2);
         padding-top: (@baseLine * 2);
+        margin: 0 auto;
     }
 
     h2 {
@@ -105,8 +106,7 @@
 
     &.logo {
         margin-top: 80px;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
+        border-radius: 10px;
 
         .form-container {
             padding-top: 40px;
