--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -5,6 +5,7 @@
 // General buttons
 
 @buttonFlatBlue: #00a0dc;
+@buttonFlatDarkBlue: #005189;
 @buttonFlatGreen: #6fbe4a;
 
 .button-flat,
@@ -28,6 +29,16 @@
         text-decoration: none;
         background: lighten(@buttonFlatBlue, 3%);
         color: #fff;
+    }
+}
+
+.button-flat-dark {
+    .button-flat;
+    background: @buttonFlatDarkBlue;
+
+    &:hover,
+    &:focus {
+        background: lighten(@buttonFlatDarkBlue, 3%);
     }
 }
 
@@ -55,6 +66,8 @@
 
 html[lang^='en'] {
     .button-flat,
+    .button-flat-dark,
+    .button-flat-green,
     .button-flat-inverted {
         text-transform: uppercase;
     }
