Bug 1151927. Update FxOS El Salvador availability.
- Remove sv availability from ZTE Open II.
- Add sv availability to Alcatel OTF C.
- Update sv purchase link.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -227,7 +227,7 @@
         <div class="provider" data-country="sv">
           <h3>{{_('El Salvador')}}</h3>
           <ul>
-            <li><a class="movistar" href="http://www.movistar.com.sv/sv/root/catalogo/telefono.php?terminal=183">{{_('Movistar')}}</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.sv/tienda/Open-Catalog/Productos/Celulares/c/celulares?q=%3Aname-asc%3Abrand%3Abrand_alcatel%3ASistema+Operativo%3AFirefox+OS">{{_('Movistar')}}</a></li>
           </ul>
         </div>
         <div class="provider" data-country="uy">
