--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -28,6 +28,16 @@
   {% stylesheet 'firefox_channel' %}
 {% endblock %}
 
+{% block site_header_logo %}
+<h2><a href="{{ url('firefox') }}">{{ high_res_img('img/firefox/template/header-logo.png', {
+  'alt': 'Mozilla Firefox',
+  'width': '185',
+  'height': '70',
+  'data-inverse-src': static('img/firefox/template/header-logo-inverse.png'),
+  'data-inverse-high-res-src': static('img/firefox/template/header-logo-inverse-high-res.png'),
+}) }}</a></h2>
+{% endblock %}
+
 {% block content %}
 
 <div id="main-content" class="pager pager-with-tabs pager-cleartype-fix pager-auto-init">
