Update some php_url links

--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -87,7 +87,7 @@
       <div class="download-box android" id="firefox-android">
         {{ download_firefox(icon=False, platform='android', small=True) }}
       </div>
-      <p class="more"><a href="{{ php_url('/firefox/') }}">{{_('Learn more about Firefox')}}</a></p>
+      <p class="more"><a href="{{ url('firefox') }}">{{_('Learn more about Firefox')}}</a></p>
     </div>
 
     <div id="developer" class="pager-page">
