--- a/bedrock/foundation/templates/foundation/feed-icon-guidelines/faq.html
+++ b/bedrock/foundation/templates/foundation/feed-icon-guidelines/faq.html
@@ -25,7 +25,7 @@
 
   <dl class="faq">
     <dt>{% trans %}What is the feed icon?{% endtrans %}</dt>
-    <dd><p>{% trans link=php_url('/firefox/livebookmarks.html') %}
+    <dd><p>{% trans link='https://support.mozilla.org/kb/Live+Bookmarks' %}
     The feed icon was created originally for
     use with the <a href="{{ link }}">Live Bookmarks</a>
     feature of the Mozilla Firefox browser. In that context the
