--- a/bedrock/foundation/templates/foundation/trademarks/policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/policy.html
@@ -192,7 +192,7 @@
 
   <h2>{{ _('Reporting Trademark Abuse') }}</h2>
 
-  <p>{% trans report=php_url('/legal/fraud-report/index.html') %}We have a <a href="{{ report }}">central place</a> for everyone to report any misuse of the Mozilla Marks.  All you have to do is fill out the relevant information on the web form.  The more information you supply when you file the report, the easier it is for us to evaluate and respond appropriately.  Having the support and help of our community makes our work easier and more worthwhile.{% endtrans %}</p>
+  <p>{% trans report=url('legal.fraud-report') %}We have a <a href="{{ report }}">central place</a> for everyone to report any misuse of the Mozilla Marks.  All you have to do is fill out the relevant information on the web form.  The more information you supply when you file the report, the easier it is for us to evaluate and respond appropriately.  Having the support and help of our community makes our work easier and more worthwhile.{% endtrans %}</p>
 
   <h2>{{ _('Questions') }}</h2>
 
