--- a/bedrock/foundation/templates/foundation/trademarks/poweredby/faq.html
+++ b/bedrock/foundation/templates/foundation/trademarks/poweredby/faq.html
@@ -191,7 +191,7 @@
 
     <dt id="comments">{{ _('How can I provide comments about this program?') }}</dt>
     <dd>
-      <p>{% trans contact=php_url('/contact') %}We've been able to put these guidelines
+      <p>{% trans contact="mailto:trademarks@mozilla.com" %}We've been able to put these guidelines
         together because of the feedback community members have provided and
         we welcome further discussions. If you have any additional comments or questions,
         feel free to post on your blog or <a href="{{ contact }}">let us know</a>.{% endtrans %}</p>
