--- a/bedrock/press/templates/press/speaker-request.html
+++ b/bedrock/press/templates/press/speaker-request.html
@@ -267,11 +267,11 @@
       #}
       <h2>{{ _('Resources') }}</h2>
       <ul>
-        <li><a href="{{ php_url('/press/ataglance') }}">{{ _('Mozilla at a Glance') }}</a></li>
-        <li><a href="{{ php_url('/press/media') }}">{{ _('Media Library') }}</a></li>
-        <li><a href="{{ php_url('/press/awards') }}">{{ _('Awards') }}</a></li>
-        <li><a href="{{ php_url('/press/kits') }}">{{ _('Firefox Press Kits') }}</a></li>
-        <li><a href="{{ php_url('/press/bios') }}">{{ _('Speaker Bios') }}</a></li>
+        <li><a href="https://blog.mozilla.org/press/ataglance/">{{ _('Mozilla at a Glance') }}</a></li>
+        <li><a href="https://blog.mozilla.org/press/media-library/">{{ _('Media Library') }}</a></li>
+        <li><a href="https://blog.mozilla.org/press/awards/">{{ _('Awards') }}</a></li>
+        <li><a href="https://blog.mozilla.org/press/kits/">{{ _('Firefox Press Kits') }}</a></li>
+        <li><a href="https://blog.mozilla.org/press/bios/">{{ _('Speaker Bios') }}</a></li>
         <li><a href="{{ url('press.speaker-request') }}">{{ _('Speaker Request Form') }}</a></li>
       </ul>
     </aside>
