Fix bug 1149335 - Add FxOS device for South Africa

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -42,6 +42,12 @@
             <li><a class="movistar" href="http://www.movistar.cl/equipos/alcatel-fire-c">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="za">
+          <h3>{{_('South Africa')}}</h3>
+          <ul>
+            <li><a class="mtn" href="https://shop.mtn.co.za/crs/browse/productFilter.jsp?brand=Alcatel">MTN</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="ch">
           <h3>{{_('Switzerland')}}</h3>
           <ul>
