--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -168,6 +168,9 @@
     .au {
         background: transparent url('/media/img/firefox/os/logo/au.png') top center no-repeat;
     }
+    .mtn {
+        background: transparent url('/media/img/firefox/os/logo/mtn.png') top center no-repeat;
+    }
     .last {
         border-right: none;
     }
