--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -82,6 +82,7 @@
           <option value="pl">{{ _('Poland') }}</option>
           <option value="ru">{{ _('Russia') }}</option>
           <option value="rs">{{ _('Serbia') }}</option>
+          <option value="za">{{ _('South Africa') }}</option>
           <option value="es">{{ _('Spain') }}</option>
           <option value="ch">{{ _('Switzerland') }}</option>
           <option value="gb">{{ _('United Kingdom') }}</option>
@@ -1238,6 +1239,7 @@
                     <li>{{ _('Hungary') }}</li>
                     <li>{{ _('Poland') }}</li>
                     <li>{{ _('Russia') }}</li>
+                    <li>{{ _('South Africa') }}</li>
                   </ul>
 
                   <h5>{{ _('Operators') }}</h5>
