--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1040,6 +1040,25 @@ html[lang|="en"] {
     }
 }
 
+/****************************************************************************/
+// Firefox iOS
+.promo-large-portrait.firefox-ios {
+    background: #e55525; // orange
+
+    h2 {
+        padding-top: 180px;
+        background: url(/media/img/home/voices/promos/ios/icon-ios.svg) center 50px no-repeat;
+    }
+}
+
+html[lang|="en"] {
+    .promo-large-portrait.firefox-ios {
+        h3 {
+            padding-top: @baseLine * 4;
+        }
+    }
+}
+
 
 /****************************************************************************/
 // Firefox Developer Edition
